--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -2,42 +2,41 @@
 	"name": "ResistorCalc",
 	"icons": [
 		{
-			"src": "\/android-chrome-36x36.png",
+			"src": "\/android-chrome-36x36.png?v=bOOjrYGYwR",
 			"sizes": "36x36",
 			"type": "image\/png",
 			"density": 0.75
 		},
 		{
-			"src": "\/android-chrome-48x48.png",
+			"src": "\/android-chrome-48x48.png?v=bOOjrYGYwR",
 			"sizes": "48x48",
 			"type": "image\/png",
 			"density": 1
 		},
 		{
-			"src": "\/android-chrome-72x72.png",
+			"src": "\/android-chrome-72x72.png?v=bOOjrYGYwR",
 			"sizes": "72x72",
 			"type": "image\/png",
 			"density": 1.5
 		},
 		{
-			"src": "\/android-chrome-96x96.png",
+			"src": "\/android-chrome-96x96.png?v=bOOjrYGYwR",
 			"sizes": "96x96",
 			"type": "image\/png",
 			"density": 2
 		},
 		{
-			"src": "\/android-chrome-144x144.png",
+			"src": "\/android-chrome-144x144.png?v=bOOjrYGYwR",
 			"sizes": "144x144",
 			"type": "image\/png",
 			"density": 3
 		},
 		{
-			"src": "\/android-chrome-192x192.png",
+			"src": "\/android-chrome-192x192.png?v=bOOjrYGYwR",
 			"sizes": "192x192",
 			"type": "image\/png",
 			"density": 4
 		}
 	],
-	"start_url": "resistorcalc.net",
 	"display": "standalone"
 }
